fix endbanner textalign, footer responsive

--- a/src/app/endbanner/endbanner.component.scss
+++ b/src/app/endbanner/endbanner.component.scss
@@ -15,6 +15,7 @@
         color: $lightbg;
         font-family: Formula;
         font-size: 30pt;
+        text-align: center;
     }
     h2{
         color: $lightbg;
