--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -68,3 +68,10 @@
 
     }
 }
+
+@media (max-width: 750px){
+    #footercontainer{
+        flex-direction: column;
+        gap:0px;
+    }
+}
